# ChangeLog for dev-perl/Server-Starter
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Server-Starter/ChangeLog,v 1.5 2014/08/26 17:09:33 axs Exp $

*Server-Starter-0.120.0-r1 (26 Aug 2014)

  26 Aug 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +Server-Starter-0.120.0-r1.ebuild, -Server-Starter-0.120.0.ebuild:
  bumped EAPI to 5 to help with dev-lang/perl upgrade

  06 Jan 2013; Torsten Veller <tove@gentoo.org> -Server-Starter-0.110.0.ebuild:
  Cleanup

*Server-Starter-0.120.0 (30 Sep 2012)

  30 Sep 2012; Torsten Veller <tove@gentoo.org> +Server-Starter-0.120.0.ebuild:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

*Server-Starter-0.110.0 (02 Feb 2012)

  02 Feb 2012; Torsten Veller <tove@gentoo.org> +Server-Starter-0.110.0.ebuild,
  +metadata.xml:
  Import from ::perl-experimental for Starlet

*Server-Starter-0.110 (20 Jan 2011)

  20 Jan 2011; Torsten Veller <tove@gentoo.org> +Server-Starter-0.110.ebuild:
  Version bump

*Server-Starter-0.090 (08 Jan 2011)

  08 Jan 2011; Torsten Veller <tove@gentoo.org> +Server-Starter-0.090.ebuild:
  Version bump

  23 Jul 2010; Torsten Veller <tove@gentoo.org> Server-Starter-0.07.ebuild:
  Test depends on Test-SharedFork

*Server-Starter-0.07 (28 Jun 2010)

  28 Jun 2010; Kent Fredric <kentfredric@gmail.com>
  +Server-Starter-0.07.ebuild, +metadata.xml:
  Added