@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Server-Starter
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Server-Starter/ChangeLog,v 1.5 2014/08/26 17:09:33 axs Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Server-Starter/ChangeLog,v 1.6 2015/03/21 23:01:33 dilfridge Exp $
+
+*Server-Starter-0.190.0 (21 Mar 2015)
+
+  21 Mar 2015; Andreas K. Huettel <dilfridge@gentoo.org>
+  +Server-Starter-0.190.0.ebuild:
+  Version bump
 
 *Server-Starter-0.120.0-r1 (26 Aug 2014)
 
